# Fading

./: .gitignore  README.md
src/: .~lock.shell.nix#  demo.py  gr-blocks-fix.patch  gui.py  net.py  pyproject.toml  qam.py  qpsk.py  shell.nix  sketch.py
src/Test_Plots/: test1_updating_series_data.py  test2_axis_limis.py
src/gr-fading_ui/: CMakeLists.txt  MANIFEST.md
src/gr-fading_ui/apps/: CMakeLists.txt
src/gr-fading_ui/docs/: CMakeLists.txt  README.fading_ui
src/gr-fading_ui/grc/: CMakeLists.txt  fading_ui_rx_ui_sink.block.yml
src/gr-fading_ui/lib/: CMakeLists.txt
src/gr-fading_ui/python/: CMakeLists.txt  __init__.py  qa_rx_ui_sink.py  rx_ui_sink.py
src/gr-fading_ui/swig/: CMakeLists.txt  fading_ui_swig.i
src/gr-fadingui/: CMakeLists.txt  MANIFEST.md  install.sh
src/gr-fadingui/apps/: CMakeLists.txt
src/gr-fadingui/docs/: CMakeLists.txt  README.fadingui
src/gr-fadingui/grc/: CMakeLists.txt  fadingui_ber.block.yml  fadingui_datasource.block.yml  fadingui_dearpygui_sink.block.yml  fadingui_deframer.block.yml  fadingui_frame_obj.block.yml  fadingui_multipath_fading.block.yml  fadingui_netsink.block.yml  fadingui_phasecorrection.block.yml  fadingui_xor_frame_sync.block.yml
src/gr-fadingui/lib/: CMakeLists.txt
src/gr-fadingui/python/: CMakeLists.txt  __init__.py  ber.py  datasource.py  dearpygui_sink.py  deframer.py  frame_obj.py  logger.py  multipath_fading.py  netsink.py  phasecorrection.py  qa_ber.py  qa_xor_frame_sync.py  (+2 more)
src/gui/: dpg.ini  gui.py  gui_v2.py  net.py  test.py
src/nix/: dearpygui.nix  gnuradio-overlay.nix  numpy-ringbuffer.nix
(+254 files in other folders)
