[tool.poetry]
name = "fading_ui"
version = "0.1.0"
description = "User Interface for RX device"
authors = ["Nao Pross <np@0hm.ch>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dearpygui = "^1.0.2"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
